# azure-storage-vcpkg-demo

./: .gitignore  CMakeLists.txt  README.md  azure_demo.cpp  vcpkg.json
.github/workflows/: build.yml
cmake-modules/: AzureVcpkg.cmake
